<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/resume_cover_letter"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cancel_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_close_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialog_title" />

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="@+id/cancel_dialog"
        app:layout_constraintStart_toStartOf="@+id/dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

    <EditText
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg1"
        android:lines="1"
        android:textSize="12sp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="@+id/cancel_dialog"
        app:layout_constraintStart_toStartOf="@+id/dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/title_txt" />

    <TextView
        android:id="@+id/resume_type_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/cancel_dialog"
        app:layout_constraintStart_toStartOf="@+id/dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Spinner
        android:id="@+id/resume_type"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/spinner_drop_down"
        app:layout_constraintEnd_toEndOf="@+id/cancel_dialog"
        app:layout_constraintStart_toStartOf="@+id/dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/resume_type_txt" />
    
    <View
        android:id="@+id/resume_type_click"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        app:layout_constraintLeft_toLeftOf="@+id/resume_type"
        app:layout_constraintTop_toTopOf="@+id/resume_type"
        app:layout_constraintRight_toRightOf="@+id/resume_type"
        app:layout_constraintBottom_toBottomOf="@+id/resume_type"/>

    <TextView
        android:id="@+id/file_upload_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/file_upload"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:paddingEnd="10dp"
        android:paddingStart="5dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="@+id/cancel_dialog"
        app:layout_constraintStart_toStartOf="@+id/dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/resume_type" />

    <TextView
        android:id="@+id/file_upload"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg1"
        android:drawableEnd="@drawable/ic_add"
        android:hint="@string/select_file"
        android:drawablePadding="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="5dp"
        android:gravity="center_vertical"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="@+id/cancel_dialog"
        app:layout_constraintStart_toStartOf="@+id/dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/file_upload_txt" />

    <Button
        android:id="@+id/apply"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg2"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/file_upload"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>