<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:background="@drawable/dialog_bg"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/no_internet"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/network_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/internet_check_txt"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/network_loader"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/loading"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/retry_btn"
        app:layout_constraintEnd_toEndOf="@+id/retry_btn"
        app:layout_constraintStart_toStartOf="@+id/retry_btn"
        app:layout_constraintTop_toTopOf="@+id/retry_btn" />

    <Button
        android:id="@+id/retry_btn"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/retry"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/network_txt" />

</android.support.constraint.ConstraintLayout>