<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".support.SupportViewActivity">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ic_left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ticket_id_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/ticket_id"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/ticket_id"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/back_arrow"
        app:layout_constraintTop_toBottomOf="@+id/back_arrow" />

    <TextView
        android:id="@+id/ticket_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/ticket_id_txt"
        app:layout_constraintEnd_toStartOf="@+id/date_txt"
        app:layout_constraintStart_toEndOf="@+id/ticket_id_txt"
        app:layout_constraintTop_toTopOf="@+id/ticket_id_txt" />

    <TextView
        android:id="@+id/date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/date"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/ticket_id_txt"
        app:layout_constraintEnd_toStartOf="@+id/date"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ticket_id"
        app:layout_constraintTop_toTopOf="@+id/ticket_id_txt" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:gravity="end"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/ticket_id_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/date_txt"
        app:layout_constraintTop_toTopOf="@+id/ticket_id_txt" />

    <TextView
        android:id="@+id/replies_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/replies"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/open_recycler"
        app:layout_constraintStart_toStartOf="@+id/back_arrow"
        app:layout_constraintTop_toBottomOf="@+id/ticket_id_txt" />

    <TextView
        android:id="@+id/replies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/replies_txt"
        app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
        app:layout_constraintStart_toStartOf="@+id/ticket_id"
        app:layout_constraintTop_toTopOf="@+id/replies_txt" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:background="@drawable/bg2"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/replies_txt"
        app:layout_constraintEnd_toEndOf="@+id/date"
        app:layout_constraintStart_toEndOf="@+id/replies"
        app:layout_constraintTop_toTopOf="@+id/replies_txt" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/open_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_constrain"
        app:layout_constraintEnd_toEndOf="@+id/date"
        app:layout_constraintStart_toStartOf="@+id/back_arrow"
        app:layout_constraintTop_toBottomOf="@+id/replies_txt">

    </android.support.v7.widget.RecyclerView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/bottom_constrain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/reply_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/reply"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/reply"
            app:layout_constraintStart_toStartOf="@+id/attach_file" />

        <EditText
            android:id="@+id/reply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg6"
            android:gravity="start"
            android:lines="3"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/attach_file_txt"
            app:layout_constraintEnd_toEndOf="@+id/submit_btn"
            app:layout_constraintStart_toStartOf="@+id/attach_file" />

        <TextView
            android:id="@+id/attach_file_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/attach_file"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/attach_file"
            app:layout_constraintStart_toStartOf="@+id/attach_file" />

        <TextView
            android:id="@+id/attach_file"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg6"
            android:drawableEnd="@drawable/ic_add"
            android:gravity="center_vertical"
            android:hint="@string/select_file"
            app:layout_constraintBottom_toTopOf="@+id/submit_btn"
            app:layout_constraintEnd_toEndOf="@+id/submit_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/bg2"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>