<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/apply_job"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cancel_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_close_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dialog_title" />

    <TextView
        android:id="@+id/desc_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="@+id/cancel_dialog"
        app:layout_constraintStart_toStartOf="@+id/dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

    <EditText
        android:id="@+id/desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg6"
        android:lines="4"
        android:textSize="12sp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="@+id/cancel_dialog"
        app:layout_constraintStart_toStartOf="@+id/dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/desc_txt" />

    <TextView
        android:id="@+id/add_cover_ltr"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:hint="@string/resume_cover_letter"
        android:gravity="center_vertical"
        android:textColorHint="@color/text_color"
        android:textSize="12sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg1"
        android:drawableEnd="@drawable/ic_add"
        android:drawablePadding="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="5dp"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="@+id/cancel_dialog"
        app:layout_constraintStart_toStartOf="@+id/dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/desc" />

    <Spinner
        android:id="@+id/select_resume"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/spinner_drop_down"
        app:layout_constraintEnd_toEndOf="@+id/cancel_dialog"
        app:layout_constraintStart_toStartOf="@+id/dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/add_cover_ltr" />

    <View
        android:id="@+id/select_resume_click"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        app:layout_constraintLeft_toLeftOf="@+id/select_resume"
        app:layout_constraintTop_toTopOf="@+id/select_resume"
        app:layout_constraintRight_toRightOf="@+id/select_resume"
        app:layout_constraintBottom_toBottomOf="@+id/select_resume"/>

    <Button
        android:id="@+id/apply"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg2"
        android:text="Apply"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/select_resume"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>