<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFFEFE"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/profile_img11"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/connection_user_code_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/textview_circle2"
            android:gravity="center"
            android:text="MS"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/profile_img1"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/profiler_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Senthil Nathan"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/profile_img11"
        app:layout_constraintLeft_toRightOf="@+id/profile_img11"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/post_type"
        android:layout_width="100dp"
        android:visibility="gone"
        android:layout_height="30dp"
        android:minWidth="80dp"
        android:background="@drawable/spinner_drop_down"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/profiler_name"
        app:layout_constraintLeft_toLeftOf="@+id/profiler_name"/>



    <EditText
        android:id="@+id/post_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="36dp"
        app:autoSizeTextType="uniform"
        android:background="@drawable/bg5"
        android:gravity="start"
        android:textColorHint="#CDCDD7"

        android:scrollbars = "vertical"
        android:maxLines="6"

        android:hint="@string/share_your_journey"
        android:imeOptions="actionDone"
        android:padding="5dp"
        android:textColor="@color/text_description_colour"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/profile_img11"
        app:layout_constraintTop_toBottomOf="@+id/post_type" />

    <ImageView
        android:id="@+id/text_fullscreen"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_add_circle"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/post_images_recycler"
        app:layout_constraintEnd_toEndOf="@+id/post_desc"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/post_desc"
        app:layout_constraintTop_toBottomOf="@+id/post_desc"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />


    <ImageView
        android:id="@+id/text_fullscreen_exit"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_remove_circle"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/post_images_recycler"
        app:layout_constraintEnd_toEndOf="@+id/post_desc"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/post_desc"
        app:layout_constraintTop_toBottomOf="@+id/post_desc"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/post_images_recycler"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="@+id/post_desc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/post_desc"
        app:layout_constraintTop_toBottomOf="@+id/post_desc" />

    <TextView
        android:id="@+id/journey_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tag_your_journey"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/post_images_recycler"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/post_images_recycler"
        app:layout_constraintTop_toBottomOf="@+id/post_images_recycler" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/journey_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="@+id/post_desc"
        app:layout_constraintStart_toStartOf="@+id/post_desc"
        app:layout_constraintTop_toBottomOf="@+id/journey_txt" />

    <TextView
        android:id="@+id/select_tag"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg11"
        android:hint="Select more Tag"
        android:textColorHint="#CDCDD7"
        android:drawableEnd="@drawable/ic_add_circle"
        android:gravity="center_vertical"
        android:lines="1"
        android:ems="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/post_desc"
        app:layout_constraintStart_toStartOf="@+id/post_desc"
        app:layout_constraintTop_toBottomOf="@+id/journey_recycler"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/milestone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose a milestone to report :"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="@+id/select_tag"
        app:layout_constraintTop_toBottomOf="@+id/select_tag" />

    <TextView
        android:id="@+id/select_visual_journey"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg11"
        android:textColorHint="#CDCDD7"
        android:hint="@string/select_milestone"
        android:gravity="center_vertical"
        android:lines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/post_desc"
        app:layout_constraintStart_toStartOf="@+id/post_desc"
        app:layout_constraintTop_toBottomOf="@+id/select_tag"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>